# chat

./: .gitignore  Cargo.toml  README.md  chat.db
chat_server/: Cargo.toml
chat_server/src/: lib.rs  main.rs  receiver.rs
chat_user/: Cargo.toml
chat_user/src/: lib.rs  main.rs  transmitter.rs
receiver/: db.rs  main.rs  receiver.rs
transmitter/: client.rs  db.rs  gui.rs  main.rs  transmitter.rs  transmitter_main.rs  tui.rs
