[package]
name = "chat_simple"
version = "0.1.0"
authors = ["Mike, <AntonovMA@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
colored = "2.0.0"
futures = "0.3.27"
async-std = "1.12.0"
sqlite = "0.30.4"
tokio = { version = "1", features = ["full"] }
crossterm = "0.26.1"
tui = "0.19.0"
unicode-width = "0.1.10"

[[bin]]
name = "receiver"
path = "receiver/main.rs"

[[bin]]
name = "transmitter"
path = "transmitter/main.rs"
