[package]
name = "chat_simple"
version = "0.1.0"
authors = ["Mike, <AntonovMA@outlook.com>"]
edition = "2021"

[dependencies]
colored = "2.0.0"
futures = "0.3.27"
gtk = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
sqlite = "0.30.4"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "receiver"
path = "receiver/main.rs"

[[bin]]
name = "transmitter"
path = "transmitter/main.rs"
