[package]
name = "chat_server"
version = "0.1.0"
authors = ["Mike, <AntonovMA@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
